# landnote

./: .gitignore  404.html  README.md  articles.xlsx  getarticle.ipynb  index.html  sitemap.xml
landnotev3/: README.md  analyze_json.py  articles.xlsx  check_journals.py  check_page_24_links.py  check_pages_v2.py  compare_pages.py  download_exam.py  find_journals.py  getarticle.ipynb  getlandarticle.py  getlawarticle.py  getlawarticle1.py  getv7.ipynb  getvnewarticle.ipynb  group_similar_titles.py  jasper.py  jasper1.py  list_page_24.py  migrate_data.py  posts.json  probe_ids.py  pyproject.toml  realestate_tool.py  scan_back.py  search_2016.py  test.ipynb  test_pages.py
landnotev3/113地政考猜/: merge.py
landnotev3/docs/: 操作手冊.md
landnotev3/real_estate_articles/: README.md  README_grouped.md  grouped_articles.json  invalid_articles.txt
landnotev3/scraped_data/: README.md  jasper_articles_20250423_085618.json  jasper_articles_20250423_125354.json  jasper_articles_20250423_131607.json  jasper_articles_20250423_131721.json  jasper_articles_20251005_221742.json  jasper_articles_organized_20250423_085618.json  jasper_articles_organized_20250423_130826.json  jasper_articles_organized_20250423_131607.json  jasper_articles_organized_20250423_131721.json  jasper_articles_organized_20251005_221742.json  jasper_articles_partial_10.json  jasper_articles_partial_100.json  jasper_articles_partial_105.json  jasper_articles_partial_110.json  jasper_articles_partial_115.json  jasper_articles_partial_120.json  jasper_articles_partial_125.json  jasper_articles_partial_130.json  (+93 more)
(+16003 files in other folders)
